Fixed default persistent object attribute grid gap

--- a/wwwroot/web-components/persistent-object-group/persistent-object-group.scss
+++ b/wwwroot/web-components/persistent-object-group/persistent-object-group.scss
@@ -29,7 +29,7 @@
         display: grid;
         grid-template-areas: var(--vi-persistent-object-group--grid-areas, none);
         grid-auto-columns: 1fr;
-        grid-gap: var(--vi-persistent-object-group--attribute-gap, var(--theme-h4));
+        grid-gap: var(--vi-persistent-object-group--attribute-gap, 0 var(--theme-h4));
 
         ::slotted(vi-persistent-object-attribute-presenter) {
             grid-area: var(--vi-persistent-object-group--attribute-area);
